--- a/bot/Makefile
+++ b/bot/Makefile
@@ -1,5 +1,10 @@
+.PHONY: build run drun
+
 build:
 	mvn package
 
 run:
-	java -cp target/JNPbot-1.0-SNAPSHOT-jar-with-dependencies.jar tutorial.Main
+	java -cp target/app-jar-with-dependencies.jar tutorial.Main
+
+drun: build
+	docker compose -f deploy/docker-compose.yaml up --build
