--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -40,6 +40,7 @@
     </dependencies>
     
     <build>
+        <finalName>app</finalName>
         <plugins>
         <!-- Maven Assembly Plugin -->
             <plugin>
