--- a/workJVP/pom.xml
+++ b/workJVP/pom.xml
@@ -36,13 +36,43 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.6.0</version>
+			<version>42.6.2</version>
 		</dependency>
 
 	</dependencies>
 
 	<build>
+		<finalName>app</finalName>
 		<plugins>
+			<!-- Maven Assembly Plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.4.1</version>
+                <configuration>
+                    <!-- get all project dependencies -->
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <!-- MainClass in mainfest make a executable jar -->
+                    <archive>
+                      <manifest>
+                        <mainClass>com.myapp.app.App</mainClass>
+                      </manifest>
+                    </archive>
+
+                </configuration>
+                <executions>
+                  <execution>
+                    <id>make-assembly</id>
+                                        <!-- bind to the packaging phase -->
+                    <phase>package</phase>
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                  </execution>
+                </executions>
+            </plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
