--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ target/
 *.iws
 *.iml
 *.ipr
-.idea/worckspace.xml
+.idea/workspace.xml
 
 ### Eclipse ###
 .apt_generated
@@ -21,6 +21,7 @@ target/
 .settings
 .springBeans
 .sts4-cache
+
 
 ### NetBeans ###
 /nbproject/private/
